# StylesFlowApp

./: docker-compose.yml
server/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
server/src/: database.py  dependencies.py
server/src/config/: constants.py  settings.py
server/src/external_services/: catvton.py  fal.py  kling.py  openai.py  replicate.py
server/src/models/: user.py
server/src/models/checkpoints/: app.py
server/src/modules/auth/: dependencies.py  google.py  jwt.py  router.py  schemas.py  service.py
server/src/modules/image_generation/: router.py  service.py
server/src/modules/migrations/: set_admin.py
server/src/modules/routers/: admin.py  external_tryon.py  generated_images.py  local_tryon.py
server/src/modules/services/: ai_services.py  local_service.py
web/: .env.example  Dockerfile  jest.config.ts  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/(auth)/: layout.tsx
web/app/(protected)/: layout.tsx  page.tsx  protected-layout.client.tsx
web/components/: ai-model-info.tsx  ai-model-tab.tsx  campaign-tab.tsx  generated-image.tsx  image-preview.tsx  image-uploader.tsx  model-settings.tsx  nav-sidebar.tsx  navigation-tabs.tsx  prompt-input.tsx  reference-upload.tsx  virtual-tryon-tab.tsx
web/components/auth/: AuthCheck.tsx  GoogleSignin.tsx
web/components/ui/: accordion.tsx  alert-dialog.tsx  dialog.tsx  (+10 more)
web/config/: index.ts
web/lib/: api-client.ts  auth.ts
web/services/: auth.service.ts
web/types/: auth.ts
(+7 files in other folders)
